fix the error that image on admin find a pet results pages not centered

--- a/static/style.css
+++ b/static/style.css
@@ -399,7 +399,7 @@ td {
   object-fit: contain
 }
 
-/* Style the list on admin find a pet result page */
+/* Style admin find a pet result pages */
 .pet-details {
   background: #e6e6e6;
   width: 600px;
@@ -411,6 +411,12 @@ td {
   margin-left: auto;
   margin-right: auto;
   box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.1), 0 5px 20px 0 rgba(0, 0, 0, 0.2);
+}
+
+.pet-details img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* Style adopter browse dogs/cats/others page */
